--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "node --version"
   },
   "author": "zakaria",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "@frontendmasters/pet": "^1.0.3",
     "bootstrap": "^4.5.0",
     "import": "0.0.6",
+    "node": "^14.4.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
