--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "First-React-App",
+  "name": "instagram-mockup-with-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "node --version"
+    "publish": "gh-pages -d dist"
   },
   "author": "zakaria",
   "license": "ISC",
@@ -19,7 +21,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "gh-pages": "^3.0.0"
   },
   "browserslist": {
     "production": [
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
