--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "publish": "gh-pages -d dist"
+    "publish": "gh-pages -d build"
   },
   "author": "zakaria",
   "license": "ISC",
@@ -21,8 +21,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
-    "gh-pages": "^3.0.0"
+    "react-scripts": "^3.4.1"
   },
   "browserslist": {
     "production": [
