--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "instagram-mockup-react",
+  "name": "instagram-mockup_react",
   "version": "1.0.0",
-  "homepage": "https://zakariahn.github.io/instagram-mockup-react",
+  "homepage": "https://zakariahn.github.io/instagram-mockup_react",
   "description": "",
   "main": "index.js",
   "scripts": {
